@@ -3,11 +3,13 @@
 $Id$
 """
 
-from AccessControl import ModuleSecurityInfo
+from AccessControl.SecurityInfo import ModuleSecurityInfo
 
-from interfaces import BASE, EXTENSION
-from permissions import ManagePortal
-from registry import _profile_registry as profile_registry
+from Products.GenericSetup.interfaces import BASE
+from Products.GenericSetup.interfaces import EXTENSION
+from Products.GenericSetup.permissions import ManagePortal
+from Products.GenericSetup.registry import _profile_registry \
+    as profile_registry
 
 security = ModuleSecurityInfo('Products.GenericSetup')
 security.declareProtected(ManagePortal, 'profile_registry')
