@@ -16,8 +16,11 @@ $Id$
 """
 import os
 
-from utils import ImportConfiguratorBase, _getProductPath
-from utils import CONVERTER, DEFAULT, KEY
+from Products.GenericSetup.utils import _getProductPath
+from Products.GenericSetup.utils import ImportConfiguratorBase
+from Products.GenericSetup.utils import CONVERTER
+from Products.GenericSetup.utils import DEFAULT
+from Products.GenericSetup.utils import KEY
 
 METADATA_XML = 'metadata.xml'
 
